# ChangeLog for games-fps/worldofpadman
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/worldofpadman/ChangeLog,v 1.13 2013/01/24 00:20:21 mr_bones_ Exp $

  24 Jan 2013; Michael Sterrett <mr_bones_@gentoo.org>
  -worldofpadman-1.2-r1.ebuild:
  old

  21 May 2012; Samuli Suominen <ssuominen@gentoo.org> worldofpadman-1.6.ebuild:
  inherit eutils for make_desktop_entry

  21 May 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  worldofpadman-1.6.ebuild:
  x86 stable wrt bug #414057

  08 May 2012; Agostino Sarubbo <ago@gentoo.org> worldofpadman-1.6.ebuild:
  Stable for amd64, wrt bug #414057

  26 Apr 2012; Tupone Alfredo <tupone@gentoo.org>
  files/worldofpadman-1.6-gentoo.patch:
  Fix undefined references for theora. Bug #407081 by Lars Wendler
  (Polynomial-C)

*worldofpadman-1.6 (24 Feb 2012)

  24 Feb 2012; Tupone Alfredo <tupone@gentoo.org> +worldofpadman-1.6.ebuild,
  +files/worldofpadman-1.6-gentoo.patch:
  Version bump to 1.6 Bug #350264 by daniel

  05 Feb 2012; Mike Frysinger <vapier@gentoo.org> worldofpadman-1.2-r1.ebuild:
  Move to new unpacker eclass for unpack_makeself.

  14 Jan 2012; Tristan Heaven <tristan@gentoo.org> worldofpadman-1.2-r1.ebuild:
  Add libsdl USE dependencies, bug #398153

  23 May 2010; Pacho Ramos <pacho@gentoo.org> worldofpadman-1.2-r1.ebuild:
  stable amd64, bug 308571

  24 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  worldofpadman-1.2-r1.ebuild:
  stable x86, bug 308571

*worldofpadman-1.2-r1 (27 Sep 2009)

  27 Sep 2009; Tristan Heaven <nyhm@gentoo.org>
  +worldofpadman-1.2-r1.ebuild:
  Fix Makefile ARCH setting which was disabling the bytecode compiler on
  amd64; add openal USE flag; respect LDFLAGS

  17 Mar 2008; Tristan Heaven <nyhm@gentoo.org> worldofpadman-1.2.ebuild:
  Add ~amd64 keyword, bug #207565

*worldofpadman-1.2 (25 Jan 2008)

  25 Jan 2008; Tristan Heaven <nyhm@gentoo.org> +metadata.xml,
  +worldofpadman-1.2.ebuild: