@@ -1,6 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX worldofpadman-1.6-gentoo.patch 2102 SHA256 4755298fa34f296d6fdc9334d875b582463ca4e5ae74c65c69e2bbdfb07a463f SHA512 d124b17972f0837c0ded524c0077bf2c58cf5d6d6254c69069d07e3616096ed7bf9e67ea9e6e658c1e706df28403375693858131eb09e30877d1132bec48efd7 WHIRLPOOL 706419680cce86ade743d9f96095bf7525a2e286de87c741d7135eeeec3d4240ab8c2b8cc6ab6ba9435813bf1c0e1d83dab8912c1081ad6adbc0e1328beae796
-DIST wop-1.5-unified.zip 947290087 SHA256 82af4a8b93cac1a6fa8deb2607e9b0a15255f8386b0c8cb21d6e532ac6c601f5
+DIST wop-1.5-unified.zip 947290087 SHA256 82af4a8b93cac1a6fa8deb2607e9b0a15255f8386b0c8cb21d6e532ac6c601f5 SHA512 fea0207efadf15afab7001227e27126aef4a673bd478dccb513c3011d0811074b2788083862f07e2f02f1a80ccb57a45ff64de8de155d8f8f7f1ab53ecf2402b WHIRLPOOL 9e39698f19f987fcae0957bd4bac53742fb6d88aa81e87750238871987f14c9202ab38918d30d0f4a420427cf719398182d4af74330f9bbd731530c54285f83b
 DIST wop-1.5.x-to-1.6-patch-unified.zip 122204892 SHA256 fe120218823825d742c506b2f448e15bf6ca756b99bc1d11d12749191e12c4c7 SHA512 a45018bd79e9e23c57bcaf692fa14c323671103558caad6acb794c2990cc5fe9cc8bdbe6a6c8254c4560d81eb59f5e3b9a6800a61b21a15870c4439f7179d936 WHIRLPOOL 61ff77e5168ec609f3fb498b7dffdf9138a14f6ea63e5537ffb583e17edb67cbab4c56d788bcfc994a2f3a11c517c10fa90c12cc0fc80571bd2702ce896597cc
-EBUILD worldofpadman-1.6.ebuild 2290 SHA256 b698f6e00c0170fdd8926c12209124969857bcce11de78b47006b3a3797711bc SHA512 598e794da00bf83a11cd12ce08a07a3b00d67fc54750167ad2b5a13906557f2d9d4f8e71d8593ef0fd0b2636a01ead8b9f3d7fa48d8ef62e331ca87a69fa8013 WHIRLPOOL 4be1e73a4b1d5ee1ec2f6dcc288c3667cfe3834e80d02cc9fdd23a119dac5141bebc1fc0af27d007bfcafdb50a5d83060e3624d5112927d33ac6844c8c067593
-MISC ChangeLog 2007 SHA256 3a3d2997eedff6e8c596bf8cc21d286443af4ac182c571f898e9bba61c2e9daa SHA512 797bdfececf7e0328e9021eb92c99586201c4d20a0686da597c32bf589ee29fc5d811f855d9056b42fb7e4a9afe296fd37730f4c2d2e4049980b22b248967d07 WHIRLPOOL e77919e9e8f676385e3d04aa0176c872ba4ac781a01d805ebc20b887210f8a5d86f1c28a7e46f9511aac05a370b025a38b872005fcca7458f644f4f530992566
+EBUILD worldofpadman-1.6.ebuild 2203 SHA256 76a07e7dc6abb8f7e44a2bbcbb971dba93498ea5cc92bd7a31a3acb7e908c2c8 SHA512 b56ea414a545c629d8c96603b3fc3d6848a772e80dd2caa96ee2dac135049b804ea88536f47083c93235e7b1bba47fc0e9db3eea2720e00307ea8dc2110abe5b WHIRLPOOL f87b5348ee0d1a60299ef30a53604c3055721bb274da417ce9e7420c39aebe69735d065a4962cad0f9a8a2259dd7b777019cb33abb2a278661c7fde1321a4caf
+MISC ChangeLog 2182 SHA256 6de0e2b841a4479e81f378e31966de86f5035cdbf0d8101eaf527d59ae1f65f9 SHA512 628d55383aa1e6518865dfb9689b16dfaeb955f30705141308170cf0e67e2a6b99ed6fbd26800f52611ca17b33148fee36698dc625cbc34517d55fac54abbbdc WHIRLPOOL 1429b6246b781ebbbf5460948056969d18d790435a7e687e60acfd1ab6551f0294ea3baeedef0eb8865a5d86fee11694c9d812d27b387bdbeb17781ba6586abc
 MISC metadata.xml 235 SHA256 ba7e89e78da07591bbf79b474180b7d9f4e53e8f877663be273bf0b7a6af7c29 SHA512 75c8c679349ca42b342fdebd1b80e0028c75f87cb0d21275ebef335baa22addd0f324e9466e884a155ae78c7dca6d0043dbf7d2b3287a7a987990a3a0cf7f55a WHIRLPOOL 7063988071e883afae9482a3cc7527c8e5225783236f85368bdf19b2ef97a2326e4055a71e14599a3ccf0137fc27a2a71c6da7b1b59298cec30d5beb85179be2
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iQEcBAEBCAAGBQJSAPqaAAoJEEdUh39IaPFN5sEIAJvrdznimie6rXShkSz4Qp7q
+b2ST98+vLgNZHJpOVAdNIXWZoJ4J7IPKsXs3Tw+lx5F0LNtgUaE2XC+s18pmooyO
+0tmQ2rDVfZczAxa+TNooHD6xURz3t8d18WbdRF35IFPBjEbjIqTGSI+xcOb+5Hry
+05pYvFn7QsiD7KqYP/YQDStA9L8EH5z4HQgm/hPDicREyFowPfqng4SQprjcm0av
+KLfAWFobpHkCKr9AexaDrqzYqKkTKfldAQw75SXqzCUwxW0+x5HF+ySVwnmVW7gn
+TDp5jRYiIOaPErld/qciehW2ox8k+bL7FDfJd5J2yZ+ByiMHQNjPbv9M2+J+XiI=
+=ogVc
+-----END PGP SIGNATURE-----
