@@ -1,6 +1,10 @@
 # ChangeLog for games-fps/worldofpadman
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/worldofpadman/ChangeLog,v 1.13 2013/01/24 00:20:21 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/worldofpadman/ChangeLog,v 1.14 2013/08/06 13:32:53 ssuominen Exp $
+
+  06 Aug 2013; Samuli Suominen <ssuominen@gentoo.org> worldofpadman-1.6.ebuild:
+  Fix building with libjpeg-turbo libjpeg.so.62 extended API wrt #479652#c1 by
+  Mike Lothian
 
   24 Jan 2013; Michael Sterrett <mr_bones_@gentoo.org>
   -worldofpadman-1.2-r1.ebuild:
